# getpot-cpp

./: CMakeLists.txt  GetPot.cpp  GetPot.hpp  LICENSE  README.md
c++/: emacs-getpot-mode.el
c++/examples/: Makefile  bool.cpp  constraints.cpp  direct_follow.cpp  example-C.pot  example-Punk.pot  expand.cpp  filter.cpp  flags.cpp  follow.cpp  input-file.cpp  nominus.cpp  options.cpp  variables.cpp
c++/examples/TEST/: Makefile  README.txt  bug-2026390.pot  bug-2990791.cpp  bug-2992224.cpp  single_char.tgz  test-absorb.sh  test-direct-follow.sh  test-expand.sh  test-field-separator.sh  test-filter.sh  test-nominus.sh  test-nominus_followers.sh  test-options.sh  test-tails.sh  test-variables.sh
c++/examples/TEST/GOOD/: test-absorb.sh.txt  test-bool.sh--false.txt  test-bool.sh--true.txt  test-direct-follow.sh--4.txt  test-field-separator.sh.txt  test-flags.sh.txt  test-get.sh--1.txt  test-get.sh--6.txt  test-get.sh.txt  test-input-file.sh.txt  test-nominus.sh--1.txt  test-nominus_followers.sh--1.txt  test-nominus_followers.sh--2.txt  test-options.sh--3.txt  test-options.sh.txt  test-tails.sh--3.txt  test-tails.sh.txt  test-ufo.sh--3.txt  test-ufo.sh--6.txt  test-variables.sh--1.txt
examples/: absorb.cpp  bool.cpp  constraints.cpp  constraints.pot  direct_follow.cpp  example-BASIC.pot  example-Latex.pot  example.pot  expand.cpp  expand.pot  ez-ufo.cpp  field_separator.cpp  filter.cpp  flags.cpp  follow.cpp  get.cpp  input-file.cpp  next.cpp  nominus.cpp  nominus_followers.cpp  options.cpp  tails.cpp  tmp  ufo.cpp  variables.cpp
examples/TEST/: bug-2026390.cpp  bug-2990791.cpp  bug-2990791.pot  bug-2992224.cpp  bug-2992224.pot  test-bool.sh  test-ez-ufo.sh  test-flags.sh  test-follow.sh  test-get.sh  test-input-file.sh  test-next.sh  test-ufo.sh
examples/TEST/ADM/: cache.fly  database.xml  history.xml
examples/TEST/GOOD/: test-absorb.sh--2.txt  test-bool.sh--default.txt  test-direct-follow.sh--3.txt  test-direct-follow.sh.txt  test-ez-ufo.sh--2.txt  test-ez-ufo.sh--3.txt  test-ez-ufo.sh.txt  test-filter.sh.txt  test-flags.sh--2.txt  test-follow.sh.txt  test-get.sh--2.txt  test-get.sh--5.txt  test-next.sh--1.txt  test-next.sh.txt  test-nominus.sh.txt  test-nominus_followers.sh.txt  test-options.sh--1.txt  test-tails.sh--4.txt  test-ufo.sh--1.txt  test-ufo.sh--5.txt  test-ufo.sh.txt  test-variables.sh--2.txt  test-variables.sh.txt
include/: GetPot.hpp
lib/: CMakeLists.txt  GetPot.cpp  templates_inst.inc
